--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,10 @@
-Dit is een pagina die opgeslagen is in een git repository...
+<!Doctype html>
+<html>
+  <head>
+    <title>Dit is een verandering aangepast in de Github editor...</title>
+  </head>
+  <body>
+    <p>Dit is een pagina die opgeslagen is in een git repository...</p>
+  </body>
+</html>
+  
