--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dit is een verandering aangepast in de Github editor...</title>
+    <meta name="author" content="Ron Wessels">
   </head>
   <body>
     <p>Dit is een pagina die opgeslagen is in een git repository...</p>
